--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         </div>
 
-        <div class="repo"> <a href="http://">Link do repositório do Git Hub</a></div>
+        <div class="repo"> <a href="https://github.com/zabella-12/virtual-card" target="blanck">Link do repositório do Git Hub</a></div>
 
     </main>
     <script src="card.js"></script>
