--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <input type="text" placeholder="Name on Card" id="holder">
                 </label>
                 <label for="CSV">
-                    <input type="number" placeholder="CSV" id="csv" maxlength="3">
+                    <input type="text" placeholder="CSV" id="csv" maxlength="3">
                 </label>
             </form>
         </div>
